# cpp-xlsx-demo

./: .gitignore  CMakeLists.txt  README.md  libxl_read_xlsx_demo.cpp  libxl_write_xlsx_demo.cpp  opxl_read_xlsx_demo.cpp  opxl_write_xlsx_demo.cpp  utils.cpp  utils.h
OpenXLSX/headers/: XLConstants.hpp  XLDateTime.hpp
inp/: example.xlsx
outs/: libxl_hw.xlsx  opxl_hw.xlsx
